[gd_scene load_steps=6 format=2]

[ext_resource path="res://Imagens/quadro_canions.png" type="Texture" id=1]
[ext_resource path="res://Fonts/classic_memesbruh03.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Codigos/dialogos/dialogoPintor.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="dialogoPintor" type="Node2D"]
script = ExtResource( 3 )

[node name="fundo" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 1922.0
margin_bottom = 1082.0
color = Color( 0, 0, 0, 0.411765 )

[node name="fundo2" type="ColorRect" parent="fundo"]
margin_left = 75.0
margin_top = 103.0
margin_right = 1255.0
margin_bottom = 344.0
color = Color( 0.956863, 0.929412, 0.929412, 0.411765 )

[node name="fundo3" type="ColorRect" parent="fundo/fundo2"]
margin_left = -3.0
margin_top = 1.0
margin_right = 1177.0
margin_bottom = 242.0
color = Color( 0.956863, 0.929412, 0.929412, 0.411765 )

[node name="caixaDialogo" type="Label" parent="."]
margin_left = 89.0
margin_top = 122.0
margin_right = 1240.0
margin_bottom = 325.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true

[node name="quadroCanions" type="Sprite" parent="."]
visible = false
position = Vector2( 621, 484 )
scale = Vector2( 0.517125, 0.437568 )
texture = ExtResource( 1 )

[node name="botaoPassar" type="Button" parent="."]
margin_left = 3.0
margin_top = 2.0
margin_right = 1923.0
margin_bottom = 1082.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
icon_align = 1
expand_icon = true

[connection signal="pressed" from="botaoPassar" to="." method="_on_botaoPassar_pressed"]
